# sysadmin

sysadmin-rs/: Cargo.toml
sysadmin-rs/src/: main.rs
sysadmin-rs/src/sysadminlib/: lib.rs
sysadmin-web/: package.json  vite.config.ts
sysadmin-web/src/lib/: classes.ts
sysadmin-web/src/routes/: +page.server.ts  +page.svelte
