[package]
name = "sysadmin"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
flexbuffers = "25.1.24"
regex = "1.11.1"
rmp-serde = "1.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

[lib]
name = "sysadminlib"
path = "src/sysadminlib/lib.rs"
edition = "2021"
crate-type = ["cdylib", "lib"]
